[package]
name = "ibc-events"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "placeholder for ibc abci events"
homepage = "https://github.com/penumbra-zone/ibc-events"
documentation = "https://docs.rs/ibc-events"
repository = "https://github.com/penumbra-zone/ibc-events"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
